--- a/ReportsClinicaValle/ReportsClinicaValle.csproj
+++ b/ReportsClinicaValle/ReportsClinicaValle.csproj
@@ -6,16 +6,36 @@
 
   <ItemGroup>
     <None Remove="Reports\Bill.repx" />
+    <None Remove="Reports\Bills\xrBillsBySeason.repx" />
+    <None Remove="Reports\Bills\xrInventario.repx" />
+    <None Remove="Reports\Bills\xrItems.repx" />
+    <None Remove="Reports\Clientes\xrClient.repx" />
+    <None Remove="Reports\Clientes\xrClientsAges.repx" />
+    <None Remove="Reports\Clientes\xrDeudas.repx" />
+    <None Remove="Reports\Compras\xrCompras.repx" />
+    <None Remove="Reports\Items\xrValoracionAlmacen.repx" />
+    <None Remove="Reports\Proveedores\xrProviders.repx" />
     <None Remove="Reports\Receipt.repx" />
     <None Remove="Reports\Recibo.repx" />
     <None Remove="Reports\RecordCard.repx" />
+    <None Remove="Reports\Records\xrRecords.repx" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Reports\Bill.repx" />
+    <EmbeddedResource Include="Reports\Bills\xrBillsBySeason.repx" />
+    <EmbeddedResource Include="Reports\Bills\xrInventario.repx" />
+    <EmbeddedResource Include="Reports\Bills\xrItems.repx" />
+    <EmbeddedResource Include="Reports\Clientes\xrClient.repx" />
+    <EmbeddedResource Include="Reports\Clientes\xrClientsAges.repx" />
+    <EmbeddedResource Include="Reports\Clientes\xrDeudas.repx" />
+    <EmbeddedResource Include="Reports\Compras\xrCompras.repx" />
+    <EmbeddedResource Include="Reports\Items\xrValoracionAlmacen.repx" />
+    <EmbeddedResource Include="Reports\Proveedores\xrProviders.repx" />
     <EmbeddedResource Include="Reports\Receipt.repx" />
     <EmbeddedResource Include="Reports\Recibo.repx" />
     <EmbeddedResource Include="Reports\RecordCard.repx" />
+    <EmbeddedResource Include="Reports\Records\xrRecords.repx" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +44,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="DevExpress.AspNetCore.Core" Version="19.1.3" />
     <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="19.1.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +53,60 @@
     </Compile>
     <Compile Update="Reports\Bill.Designer.cs">
       <DependentUpon>Bill.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Bills\xrBillsBySeason.cs">
+      <DependentUpon>xrBillsBySeason.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Bills\xrBillsBySeason.Designer.cs">
+      <DependentUpon>xrBillsBySeason.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Bills\xrInventario.cs">
+      <DependentUpon>xrInventario.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Bills\xrInventario.Designer.cs">
+      <DependentUpon>xrInventario.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Bills\xrItems.cs">
+      <DependentUpon>xrItems.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Bills\xrItems.Designer.cs">
+      <DependentUpon>xrItems.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Clientes\xrClient.cs">
+      <DependentUpon>xrClient.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Clientes\xrClient.Designer.cs">
+      <DependentUpon>xrClient.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Clientes\xrClientsAges.cs">
+      <DependentUpon>xrClientsAges.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Clientes\xrClientsAges.Designer.cs">
+      <DependentUpon>xrClientsAges.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Clientes\xrDeudas.cs">
+      <DependentUpon>xrDeudas.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Clientes\xrDeudas.Designer.cs">
+      <DependentUpon>xrDeudas.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Compras\xrCompras.cs">
+      <DependentUpon>xrCompras.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Compras\xrCompras.Designer.cs">
+      <DependentUpon>xrCompras.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Items\xrValoracionAlmacen.cs">
+      <DependentUpon>xrValoracionAlmacen.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Items\xrValoracionAlmacen.Designer.cs">
+      <DependentUpon>xrValoracionAlmacen.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Proveedores\xrProviders.cs">
+      <DependentUpon>xrProviders.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Proveedores\xrProviders.Designer.cs">
+      <DependentUpon>xrProviders.repx</DependentUpon>
     </Compile>
     <Compile Update="Reports\Receipt.cs">
       <DependentUpon>Receipt.repx</DependentUpon>
@@ -50,6 +125,12 @@
     </Compile>
     <Compile Update="Reports\RecordCard.Designer.cs">
       <DependentUpon>RecordCard.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Records\xrRecords.cs">
+      <DependentUpon>xrRecords.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Records\xrRecords.Designer.cs">
+      <DependentUpon>xrRecords.repx</DependentUpon>
     </Compile>
   </ItemGroup>
 
